--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -14,17 +14,46 @@
 
         <div class="form-group">
             <label class="sr-only" for="type">Type</label>
-            <input class="form-control" type="text" id="type" name="type" placeholder="Type" />
+            <select id="type" name="type" class="form-control">
+                {{#if types}}
+                {{#each types}}
+                <option value="{{id}}">{{type}}</option>
+                {{/each}}
+                {{/if}}
+            </select>
         </div>
 
         <div class="form-group">
             <label class="sr-only" for="sub_type">Sub Type</label>
-            <input class="form-control" type="text" id="sub_type" name="sub_type" placeholder="Sub Type" />
+            <select id="sub_type" name="sub_type" class="form-control">
+                {{#if sub_types}}
+                {{#each sub_types}}
+                <option value="{{id}}">{{sub_type}}</option>
+                {{/each}}
+                {{/if}}
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label class="sr-only" for="language">Language</label>
+            <select id="language" name="language" class="form-control">
+                {{#if languages}}
+                {{#each languages}}
+                <option value="{{id}}">{{language}}</option>
+                {{/each}}
+                {{/if}}
+            </select>
         </div>
 
         <div class="form-group">
             <label class="sr-only" for="location">Location</label>
-            <input class="form-control" type="text" id="location" name="location" placeholder="Location" />
+            <select id="location" name="location" class="form-control">
+                {{#if locations}}
+                {{#each locations}}
+                <option value="{{id}}">{{location}}</option>
+                {{/each}}
+                {{/if}}
+            </select>
         </div>
         
         <button type="submit" class="btn btn-primary">Add book</button>
