--- a/views/books.hbs
+++ b/views/books.hbs
@@ -56,6 +56,7 @@
                 <strong>Location:</strong> {{location}}<br/>
             </p>
             <a href="#" class="btn btn-primary">Book details</a>
+            <a href="/books/updatebook?id={{id}}" class="btn btn-secondary edit-book"><span class="fa fa-pencil"></span></a>
             <button class="btn btn-danger remove-book" onclick="setDataAttr(this);" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
                 <span class="fa fa-times"></span>
             </button>
@@ -66,7 +67,7 @@
 </container>
 
 <!-- Remove Book Alert -->
-<div id="removeBookAlert" class="alert alert-danger alert-dismissible fade" role="alert">
+<div id="removeBookAlert" class="alert alert-danger alert-dismissible fade collapse" role="alert">
     <strong>Book was successfully removed from your library.</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
