--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,6 @@ body {
 header {
     text-align: center;
     padding-bottom: 1rem;
-    margin-top: 2rem;
     margin-bottom: 2rem;
     border-bottom: 2px solid #ccc;
 }
@@ -52,6 +51,11 @@ main {
     width: 100%;
 }
 
+.jumbotron {
+    padding-top: 2rem;
+    background: #fff;
+}
+
 .burning-book img {
     width: 100%;
 }
@@ -66,8 +70,72 @@ main {
     top: 0;
 }
 
+table td.break-word, table td.break-word * {
+    word-break: break-word;
+}
+
+table th.text-center, table td.text-center {
+    text-align: center;
+}
+
 .sm-hide {
     display: none;
+}
+
+.remove-book {
+    color: #dc3545;
+    font-size: 20px;
+}
+
+.dark-link {
+    color: #212529;
+}
+
+#bookDetailsModal .flex {
+    justify-content: space-around;
+    margin-bottom: 1rem;
+}
+
+#bookDetailsModal .flex img {
+    width: 128px;
+}
+
+#loadingSpinner {
+    position: fixed;
+    z-index: 3;
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+#loadingSpinner.show {
+    display: block;
+}
+
+#loadingSpinner .fa {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: -25px auto 0;
+    color: #fff;
+    display: block;
+    width: 65px;
+    font-size: 65px;
+}
+
+.alert {
+    position: fixed;
+    top: 10px;
+    left: 0;
+    right: 0;
+    width: 90%;
+    margin: 0 auto;
+    z-index: 3;
+    box-shadow: 0px 1px 10px 0px #aaa
 }
 
 @media (max-width: 650px) {
@@ -88,11 +156,16 @@ main {
     }
 
     header {
+        margin-top: 2rem;
         margin-bottom: 1rem;
     }
 
     #logo {
         width: 60px;
+    }
+
+    .jumbotron {
+        background: #e9ecef;
     }
 
     .sm-hide {
@@ -141,13 +214,23 @@ main {
         bottom: 1.25rem;
     }
 
-    .alert {
-        position: fixed;
-        top: 10px;
-        left: 0;
-        right: 0;
-        width: 90%;
-        margin: 0 auto;
-        z-index: 3;
+    .remove-book {
+        color: #fff;
+    }
+
+    #bookDetailsModal .flex {
+        justify-content: space-between;
+        align-items: start;
+    }
+    
+    #bookDetailsModal .flex img {
+        max-width: 128px;
+        width: 50%;
+        min-width: 110px;
+        margin-right: 10px;
+    }
+
+    #bookDetailsModal .book-details-container {
+        font-size: 0.85rem;
     }
 }
