--- a/views/books.hbs
+++ b/views/books.hbs
@@ -1,6 +1,6 @@
 <div class="search-form-container margin-bottom">
     <form action="/books/searchbooks" method="GET">
-        <input class="form-control" type="text" name="booksearch" id="book-search" placeholder="Author, Title, Type, or Location" />
+        <input class="form-control" type="text" name="booksearch" id="book-search" placeholder="Search Author, Title, Type, or Location" />
         <button id="search-books-submit" class="btn btn-primary" type="submit"><span class="fa fa-search"></span></button>
     </form>
     <a href="/books/addbook" class="btn btn-success top-float-button" title="Add a new book to your library">Add a book to your library <span class="fa fa-plus"></span></a>
@@ -12,29 +12,41 @@
     {{/if}}
 </div>
 
-<table class="table xs-hide">
+<table class="table xs-hide table-bordered table-hover table-sm">
     <thead>
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Author</th>
-            <th scope="col">Title</th>
-            <th scope="col">Type</th>
-            <th scope="col">Sub Type</th>
-            <th scope="col">Language</th>
-            <th scope="col">Location</th>
+            <th style="width:5%;" scope="col"></th>
+            <th style="width:25%;" scope="col">Author</th>
+            <th style="width:35%;" scope="col">Title</th>
+            <th style="width:10%;" scope="col">Type</th>
+            <th style="width:10%;" scope="col">Sub Type</th>
+            <th style="width:10%;" scope="col">Location</th>
+            <th style="width:5%;" scope="col"></th>
         </tr>
     </thead>
     <tbody>
         {{#if books}}
         {{#each books}}
         <tr>
-            <th scope="row">{{id}}</th>
-            <td>{{author}}</td>
-            <td>{{title}}</td>
+            <th scope="row" class="text-center">
+                <a href="/books/updatebook?id={{id}}" class="edit-book">
+                    <span class="fa fa-pencil"></span>
+                </a>
+            </th>
+            <td class="break-word">
+                <a href="javascript:;" onclick="getBookInfo(this);" class="get-book-info dark-link" data-query="q={{title}}+inauthor:{{author}}">{{author}}</a>
+            </td>
+            <td class="break-word">
+                <a href="javascript:;" onclick="getBookInfo(this);" class="get-book-info dark-link" data-query="q={{title}}+inauthor:{{author}}">{{title}} ({{language}})</a>
+            </td>
             <td>{{type}}</td>
             <td>{{sub_type}}</td>
-            <td>{{language}}</td>
             <td>{{location}}</td>
+            <td class="text-center">
+                <a href="#" class="remove-book" onclick="setDataAttr(this);" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
+                    <span class="fa fa-times"></span>
+                </a>
+            </td>
         </tr>
         {{/each}}
         {{/if}}
@@ -45,7 +57,7 @@
     {{#if books}}
     {{#each books}}
     <div class="card">
-        <img src="/static/img/don_quixote.jpg" class="card-img-top" alt="Image of {{title}}">
+        {{!--<img src="/static/img/don_quixote.jpg" class="card-img-top" alt="Image of {{title}}">--}}
         <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
             <p class="card-text">
@@ -55,8 +67,10 @@
                 <strong>Language:</strong> {{language}}<br/>
                 <strong>Location:</strong> {{location}}<br/>
             </p>
-            <a href="#" class="btn btn-primary">Book details</a>
-            <a href="/books/updatebook?id={{id}}" class="btn btn-secondary edit-book"><span class="fa fa-pencil"></span></a>
+            <a href="javascript:;" onclick="getBookInfo(this);" class="get-book-info btn btn-primary" data-query="q={{title}}+inauthor:{{author}}">Book details</a>
+            <a href="/books/updatebook?id={{id}}" class="btn btn-secondary edit-book">
+                <span class="fa fa-pencil"></span>
+            </a>
             <button class="btn btn-danger remove-book" onclick="setDataAttr(this);" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
                 <span class="fa fa-times"></span>
             </button>
@@ -66,20 +80,12 @@
     {{/if}}
 </container>
 
-<!-- Remove Book Alert -->
-<div id="removeBookAlert" class="alert alert-danger alert-dismissible fade collapse" role="alert">
-    <strong>Book was successfully removed from your library.</strong>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-
-<!-- Modal -->
+<!-- Confirm Remove Book Modal -->
 <div class="modal fade" id="removeBookModal" tabindex="-1" role="dialog" aria-labelledby="removeBookModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="removeBookModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="removeBookModalLabel">Delete Book</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -90,6 +96,24 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <button id="removeBookConfirm" type="button" class="btn btn-primary" onclick="removeBook(this);">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Book Details Modal -->
+<div class="modal fade" id="bookDetailsModal" tabindex="-1" role="dialog" aria-labelledby="bookDetailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bookDetailsModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
             </div>
         </div>
     </div>
