--- a/views/includes/header.hbs
+++ b/views/includes/header.hbs
@@ -1,7 +1,7 @@
 <header>
     <div class="flex">
-        <h1>Antoine's Collections</h1>
-        <a id="logo" href="https://www.linkedin.com/in/anatallah/" target="_blank">
+        <h1><a href="/">Antoine's Collections</h1></a>
+        <a id="logo" href="/" target="_blank">
             <img src="/static/img/antoine.jpg" />
         </a>
     </div>
