--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,6 +11,7 @@
     <link href="/static/css/style.css" rel="Stylesheet" type="text/css" />
 </head>
 <body>
+    <div id="loadingSpinner"><span class="fa fa-spinner fa-spin"></span></div>
     <section id="app">
         <div class="jumbotron">
             {{> header }}
