--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="Stylesheet" type="text/css" />
     
-    <link href="/static/css/style.css" rel="Stylesheet" type="text/css" />
+    <!--<link href="/static/css/style.css" rel="Stylesheet" type="text/css" />-->
 </head>
 <body>
     <div id="loadingSpinner"><span class="fa fa-spinner fa-spin"></span></div>
@@ -20,9 +20,11 @@
         </div>
     </section>
     
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/script.js"></script>
+    <!--<script src="/static/js/script.js"></script>-->
+    <script src="/static/dist/bundle.js"></script>
 </body>
 </html>
