--- a/views/books.hbs
+++ b/views/books.hbs
@@ -43,7 +43,7 @@
             <td>{{sub_type}}</td>
             <td>{{location}}</td>
             <td class="text-center">
-                <a href="#" class="remove-book" onclick="setDataAttr(this);" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
+                <a href="#" class="remove-book" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
                     <span class="fa fa-times"></span>
                 </a>
             </td>
@@ -71,7 +71,7 @@
             <a href="/books/updatebook?id={{id}}" class="btn btn-secondary edit-book">
                 <span class="fa fa-pencil"></span>
             </a>
-            <button class="btn btn-danger remove-book" onclick="setDataAttr(this);" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
+            <button class="btn btn-danger remove-book" data-bookid="{{id}}" data-toggle="modal" data-target="#removeBookModal">
                 <span class="fa fa-times"></span>
             </button>
         </div>
@@ -95,7 +95,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="removeBookConfirm" type="button" class="btn btn-primary" onclick="removeBook(this);">Yes</button>
+                <button id="removeBookConfirm" type="button" class="btn btn-primary">Yes</button>
             </div>
         </div>
     </div>
