--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,6 +17,6 @@
     </section>
     
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
-    <script src="/static/dist/bundle.js"></script>
+    <script src="/static/dist/library.bundle.js"></script>
 </body>
 </html>
