Add server webpack config. Bundle css into external file.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Antoine's Books and Music</title>
+    <link href="/static/dist/library.bundle.css" type="text/css" rel="Stylesheet" />
 </head>
 <body>
     <div id="loadingSpinner"><span class="fa fa-spinner fa-spin"></span></div>
