Update error handling on client and server.  Remove /getbooks end point.

--- a/views/updatebook.hbs
+++ b/views/updatebook.hbs
@@ -67,4 +67,13 @@
         </button>
     </div>
     {{/if}}
+
+    {{#if errorMsg}}
+    <div class="alert alert-success" role="alert">
+        {{errorMsg}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {{/if}}
 </div>
