--- a/views/books.hbs
+++ b/views/books.hbs
@@ -7,8 +7,8 @@
 </div>
 
 <div id="search-fail">
-    {{#if error}}
-    <div class="alert alert-danger" role="alert">{{error}}</div>
+    {{#if errorMsg}}
+    <div class="alert alert-danger" role="alert">{{errorMsg}}</div>
     {{/if}}
 </div>
 
