--- a/views/books.hbs
+++ b/views/books.hbs
@@ -7,8 +7,13 @@
 </div>
 
 <div id="search-fail">
-    {{#if error}}
-    <div class="alert alert-danger" role="alert">{{error}}</div>
+    {{#if errorMsg}}
+    <div class="alert alert-danger" role="alert">
+        {{errorMsg}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>    
+    </div>
     {{/if}}
 </div>
 
