Update search, add, and update to use Sequelize.

--- a/views/books.hbs
+++ b/views/books.hbs
@@ -16,7 +16,9 @@
     </div>
     {{/if}}
 </div>
-
+<script>
+    console.log('wtf: ', {{books}});
+</script>
 <table id="books-table" class="table xs-hide table-bordered table-hover table-sm">
     <thead>
         <tr>
