Refactor design and promisify db connection pool object.

--- a/views/books.hbs
+++ b/views/books.hbs
@@ -1,5 +1,5 @@
 <div class="search-form-container margin-bottom">
-    <form action="/books/searchbooks" method="GET">
+    <form action="/books/searchbooks" method="GET" class="margin-bottom">
         <input class="form-control" type="text" name="booksearch" id="book-search" placeholder="Search Author, Title, Type, or Location" />
         <button id="search-books-submit" class="btn btn-primary" type="submit"><span class="fa fa-search"></span></button>
     </form>
