--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,31 +4,14 @@
     border-radius: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
-    margin: 1rem;
-    padding: 0;
-    font-size: 1rem;
-}
-
-#app {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-header {
-    text-align: center;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-    border-bottom: 2px solid #ccc;
-}
-
-form {
-    margin-bottom: 1rem;
-}
-
-main {
-    max-width: 500px;
-    margin: 0 auto;
+    position: relative;
+    padding-bottom: 210px;
+    min-height: 100%;
 }
 
 .margin-top {
@@ -45,31 +28,86 @@ main {
     align-items: center;
 }
 
+header {
+    background: #555;
+    padding: 2rem;
+}
+
+header h1 a {
+    color: #fff;
+}
+
+header h1 a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
 #logo {
-    width: 100px;
+    width: 200px;
 }
 
 #logo img {
     width: 100%;
 }
 
+#collections > div {
+    margin-top: 2rem;
+}
+
+#collections > div:first-child {
+    margin-top: 0;
+}
+
+#collections .btn {
+    font-size: 4rem;
+    width: 100%;
+}
+
 .jumbotron {
     padding-top: 2rem;
     background: #fff;
+    margin-bottom: 0;
 }
 
 .burning-book img {
     width: 100%;
 }
 
+.search-form-container {
+    height: 108px;
+}
+
 .search-form-container form {
     position: relative;
+}
+
+.search-form-container form.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    box-shadow: 0px 0px 35px -2px #777
+}
+
+.search-form-container form input.form-control {
+    border-radius: 0;
+}
+
+.search-form-container form.sticky input.form-control {
+    padding: 0.25rem 0 0.25rem 0.75rem;
+    height: 45px;
 }
 
 #search-books-submit {
     position: absolute;
     right: 0;
     top: 0;
+}
+
+.search-form-container form.sticky #search-books-submit {
+    height: 45px;
+    width: 50px;
 }
 
 table td.break-word, table td.break-word * {
@@ -140,13 +178,36 @@ table th.text-center, table td.text-center {
     box-shadow: 0px 1px 10px 0px #aaa
 }
 
-@media (max-width: 650px) {
-    body {
-        margin: 0;
-    }
+footer {
+    padding: 4rem 0 2rem;
+    background: #000;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
 
+footer ul {
+    list-style-type: none;
+    margin-bottom: 3rem;
+    padding: 0;
+    font-size: 1.75rem;
+}
+
+footer ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+footer ul li a {
+    color: #fff;
+}
+
+@media (max-width: 650px) {
     h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 
     h2 {
@@ -155,15 +216,6 @@ table th.text-center, table td.text-center {
 
     h3 {
         font-size: 1.2rem;
-    }
-
-    header {
-        margin-top: 2rem;
-        margin-bottom: 1rem;
-    }
-
-    #logo {
-        width: 60px;
     }
 
     .jumbotron {
@@ -178,14 +230,8 @@ table th.text-center, table td.text-center {
         display: none;
     }
 
-    .top-float-button {
-        display: block;
-        position: absolute;
-        top: 10px;
-        width: 90%;
-        right: 0;
-        left: 0;
-        margin: 0 auto;
+    #collections .btn {
+        font-size: 2rem;
     }
 
     .card {
@@ -214,9 +260,6 @@ table th.text-center, table td.text-center {
         position: absolute;
         right: 1.25rem;
         bottom: 1.25rem;
-    }
-
-    .remove-book {
         color: #fff;
     }
 
