--- a/views/includes/header.hbs
+++ b/views/includes/header.hbs
@@ -1,8 +1,8 @@
 <header>
     <div class="flex">
-        <h1><a href="/">Books</h1></a>
-        <a id="logo" href="/" target="_blank">
-            <!--<img src="/static/img/antoine.jpg" />-->
+        <h1><a href="/">Collection Organizer</h1></a>
+        <a id="logo" href="/">
+            <img src="/static/img/library-logo.jpg" alt="Library Organizer Logo" />
         </a>
     </div>
 </header>
