--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,19 @@
 <main>
-    <div class="row">
-        <div class="col-xs-6 col-sm-6 text-center margin-top">
+    <div id="collections" class="row">
+        <div class="col-12 text-center margin-top">
             <a href="/books" class="btn btn-primary btn-lg">Books</a>
         </div>
 
-        <div class="col-xs-6 col-sm-6 text-center margin-top">
+        <div class="col-12 text-center margin-top">
             <a href="/music" class="btn btn-dark btn-lg">Music</a>
+        </div>
+
+        <div class="col-12 text-center margin-top">
+            <a href="/movies" class="btn btn-dark btn-lg">Movies</a>
+        </div>
+
+        <div class="col-12 text-center margin-top">
+            <a href="/comics" class="btn btn-dark btn-lg">Comics</a>
         </div>
     </div>
 </main>
