--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,12 +10,12 @@
 <body>
     <div id="loadingSpinner"><span class="fa fa-spinner fa-spin"></span></div>
     <section id="app">
+        {{> header }}
         <div class="jumbotron">
-            {{> header }}
-
             {{{body}}}
         </div>
     </section>
+    {{> footer}}
     
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
     <script src="/static/dist/library.bundle.js"></script>
