--- a/views/updatebook.hbs
+++ b/views/updatebook.hbs
@@ -69,7 +69,7 @@
     {{/if}}
 
     {{#if errorMsg}}
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-danger" role="alert">
         {{errorMsg}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
